# amaototyann_v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bubble_msg.py  command.py  debug.sh  docker-compose.yml  messages.py  pyproject.toml  render.yaml  requirements.txt  server.py  start.sh
.github/workflows/: ci.yml
amaototyann/: __init__.py  config.py  logging_config.py  messages.py
amaototyann/core/: __init__.py  commands.py
amaototyann/debug/: __init__.py  debugger.py  router.py  start.py
amaototyann/debug/templates/: update_template.html  webhook_sender.html
amaototyann/gas/: __init__.py  client.py
amaototyann/models/: __init__.py  bot.py  commands.py  schedule.py  settings.py
amaototyann/server/: __init__.py  app.py  lifespan.py
amaototyann/server/routes/: __init__.py  admin.py  api_admin.py  line.py  push.py  spa.py
amaototyann/sheets/: __init__.py  client.py
amaototyann/src/: __init__.py  bubble_msg.py  command.py  database.py  disbot_client.py  discord.py  log_config.json  messages.py  react_webhook.py  server.py  system.py
amaototyann/src/commands/: __init__.py  _command.py
amaototyann/src/core/: commands.py  gas_client.py
amaototyann/store/: __init__.py  memory.py  settings.py
docs/: gas_commands.js
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: build_frontend.sh  debug.sh  init_settings_sheets.py  lint.sh  start.sh
src/: bubble_msg.py  command.py  database.py  log_config.json  messages.py  server.py  system.py
src/debug/: debugger.py
tests/: conftest.py  test_core_commands.py  test_line_converter.py  test_line_security.py  test_server_routes.py  test_settings_store.py  test_store_memory.py
(+15 files in other folders)
