[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amaototyann"
version = "3.0.0"
description = "LINE + Discord notification bot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiohttp>=3.11.0",
    "line-bot-sdk>=3.11.0",
    "discord.py>=2.4.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "gspread>=6.0",
    "google-auth>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ASYNC", "RUF", "SIM", "TCH", "PT"]
ignore = ["B008", "RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["amaototyann"]

[tool.ty]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["amaototyann"]
omit = ["tests/*", "amaototyann/debug/*"]
